fix horizontal scroll in mozilla firefox

--- a/Group2/css/contactform.css
+++ b/Group2/css/contactform.css
@@ -1,35 +1,38 @@
 * {
-  margin: 0;
-  box-sizing: border-box;
-  padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .Contact-header {
-  text-align: center;
-  font-style: normal;
-  font-weight: 300;
+    text-align: center;
+    font-style: normal;
+    font-weight: 300;
 }
+
 #contactusstyled {
-  font-family: Berkshire Swash;
-  font-weight: bold;
+    font-family: Berkshire Swash;
+    font-weight: bold;
 }
 
 .form-section {
-  padding-top: 65px;
+    padding-top: 65px;
 }
 
 .contact-text {
-  color: rgba(91, 14, 34, 0.85);
-  font-weight: bold;
-  font-family: Merriweather Sans;
+    color: rgba(91, 14, 34, 0.85);
+    font-weight: bold;
+    font-family: Merriweather Sans;
 }
 
 .form-control {
-  border-radius: 0px;
+    border-radius: 0px;
 }
 
 .Btn-submit {
-  padding-top: 40px;
+    padding-top: 40px;
 }
 
 .btn-primary,
@@ -37,23 +40,24 @@
 .btn-primary:active,
 .btn-primary:visited,
 .btn-primary:focus {
-  background-color: rgba(91, 14, 34, 0.85);
-  border-color: rgba(91, 14, 34, 0.85);
-  border-radius: 0;
-  box-shadow: none;
-  width: 250px;
-  height: 70px;
-  font-family: Merriweather Sans;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
+    background-color: rgba(91, 14, 34, 0.85);
+    border-color: rgba(91, 14, 34, 0.85);
+    border-radius: 0;
+    box-shadow: none;
+    width: 250px;
+    height: 70px;
+    font-family: Merriweather Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
 }
 
-.maps{
-  margin-top: 2rem;
-  width: 100vw;
+.maps {
+    margin-top: 2rem;
+    width: 100vw;
 }
-iframe{
-  height: 600px;
-  border: 0;
+
+iframe {
+    height: 600px;
+    border: 0;
 }
